# act-spec

./: README.md
avro/: confirm.avsc  conversation.avsc  entity.avsc
docs/: act-types.md  architecture.md  getting-started.md  integration-guide.md  schema-design.md  validation.md  versioning.md
idl/avro/: act.avsc  ask.avsc  commit.avsc  constraint.avsc  entity_ref.avsc  error.avsc  fact.avsc  participant.avsc
idl/json-schema/: act.json  ask.json  commit.json  confirm.json  constraint.json  conversation.json  entity.json  error.json  fact.json  participant.json
idl/protobuf/: act.proto  ask.proto  commit.proto  confirm.proto  constraint.proto  conversation.proto  entity.proto  error.proto  fact.proto  participant.proto
model/go/: README.md  astra.go  go.mod  go.sum  schemas.go  types.go  types_test.go  utils.go
model/python/: .gitignore  README.md  pyproject.toml
model/python/src/astra_model/: __init__.py  schemas.py  types.py
model/python/tests/: test_types.py
model/typescript/: .gitignore  .npmignore  README.md  jest.config.js  package.json  tsconfig.json
model/typescript/src/: index.ts  schemas.ts  types.ts
model/typescript/test/: types.test.ts
